# teleesp32

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  api_telegram_org.pem  ifconfig_me_chain.pem  main.c
main/tg_api/: tg_api.c  tg_api.h
